# fossil-monorepo

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.sqs.yml  docker-compose.test.yml  setup-localstack.sh
.github/scripts/: update-badges.sh
.github/workflows/: build.yml  lint.yml  monorepo-ci.yml  op-build.yml  op-ci.yml  op-deploy.yml  op-jfrog.yml  op-lint.yml  op-test.yml  ps-build.yml  ps-coverage.yml  ps-lint.yml  ps-rust.yml  ps-test.yml  rust-ci.yml  rust.yml  shared-build.yml  shared-lint.yml  shared-test.yml  test.yml
.github/workflows/composite/ps-test-setup/: action.yml
crates/db/: Cargo.toml
crates/db/src/: models.rs
crates/message-handler/: Cargo.toml
crates/message-handler/src/: example_service_main.rs  lib.rs  main.rs
crates/message-handler/src/hashing/: mod.rs
crates/message-handler/src/proof_composition/: mod.rs
crates/message-handler/src/queue/: local_message_queue.rs  message_queue.rs  sqs_message_queue.rs
crates/message-handler/src/services/: hashing_service.rs  job_dispatcher.rs  jobs.rs  mod.rs  proof_job_handler.rs  simple_prove_service.rs
crates/message_handlers/: Cargo.toml
crates/message_handlers/src/: example_service_main.rs  lib.rs  main.rs
crates/message_handlers/src/hashing/: mod.rs  test.rs
crates/message_handlers/src/http/: mod.rs
crates/message_handlers/src/proof_composition/: mod.rs
crates/message_handlers/src/queue/: local_message_queue.rs  message_queue.rs  sqs_message_queue.rs
crates/message_handlers/src/response_handler/: mod.rs
crates/message_handlers/src/services/: example_message_handler.rs  hashing_service.rs  job_dispatcher.rs  proof_job_handler.rs  simple_prove_service.rs
crates/proving-service/: Cargo.toml
crates/proving-service/src/: lib.rs  main.rs  routes.rs
crates/proving-service/src/handlers/: jobs.rs
crates/test_components/: Cargo.toml
crates/test_components/src/: docker.rs  lib.rs  mock_fossil_light_client.rs
docker/: Dockerfile  docker-compose.test.yml
docs/: data_workflow.md
mock_contracts/: .env.local  .tool-versions  Dockerfile  Scarb.toml  account.json  docker-compose.yaml
mock_contracts/scripts/: deploy-mock-hash-storage.sh
mock_contracts/src/: lib.cairo  mock_fossil_light_client.cairo  mock_hash_storage.cairo
mock_contracts/tests/: test_contract.cairo
offchain-processor/: .env.example  Cargo.toml  Makefile  README.md  docker-compose.test.yml
offchain-processor/.sqlx/: query-0b1a6addf2f510f67242339d802f79301eb2634e22d5edd9a36d513e85dd5410.json  query-4f7dc9b08a32852ef135c81460449d2f3eb161ea7c3d143ed6b1451df6718470.json
offchain-processor/crates/db-access/: Cargo.toml  README.md
offchain-processor/crates/db-access/src/: lib.rs  models.rs  queries.rs
offchain-processor/crates/server/: Cargo.toml
offchain-processor/crates/server/src/: lib.rs  main.rs  types.rs
offchain-processor/crates/server/src/handlers/: get_pricing_data.rs
offchain-processor/crates/server/src/handlers/fixtures/: mod.rs
offchain-processor/crates/server/src/middlewares/: auth.rs
offchain-processor/scripts/: coverage-summary.sh  generate-badge.sh  open-coverage.sh  setup-coverage.sh
proving-service/: .codespellrc  .env.example  Cargo.toml  Makefile  README.md  codecov.yml
proving-service/crates/db/: Cargo.toml
proving-service/crates/db/src/: lib.rs  models.rs
proving-service/crates/message-handler/: Cargo.toml
proving-service/crates/message-handler/src/: example_service_main.rs  lib.rs  main.rs
proving-service/crates/message-handler/src/hashing/: mod.rs
proving-service/crates/message-handler/src/proof_composition/: mod.rs
proving-service/crates/message-handler/src/queue/: mod.rs  sqs_message_queue.rs
proving-service/crates/message-handler/src/response_handler/: mod.rs
proving-service/crates/message-handler/src/services/: example_message_handler.rs  hashing_service.rs  jobs.rs  proof_job_handler.rs
proving-service/crates/proving-service/: Cargo.toml
proving-service/crates/proving-service/src/: lib.rs  main.rs
proving-service/crates/proving-service/src/handlers/: jobs.rs
proving-service/docker/: docker-compose.sqs.yml
proving-service/mock_contracts/: .env.local  .tool-versions  Dockerfile  Scarb.toml  docker-compose.yaml
proving-service/mock_contracts/scripts/: deploy-contracts.sh
proving-service/mock_contracts/src/: lib.cairo  mock_fossil_light_client.cairo  mock_hash_storage.cairo
proving-service/mock_contracts/tests/: test_contract.cairo
proving-service/scripts/: coverage-summary.sh  run-message-handler.sh  setup-localstack.sh  test-message-handler.sh
proving-service/tests/: init.sql
scripts/: generate-badge.sh  open-coverage.sh  setup-coverage.sh
src/: lib.rs  main.rs
src/hashing/: mod.rs  test.rs
src/queue/: local_message_queue.rs  message_queue.rs  mod.rs  sqs_message_queue.rs
src/services/: hashing_service.rs  job_dispatcher.rs  mod.rs
