[package]
name = "prover-service"
version = "0.1.0"
edition = "2024"

[dependencies]

aws-config = "1.6.0"
aws-sdk-sqs = "1.62.0"

axum = "0.8.1"
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
