[workspace  ]
members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
eyre = "0.6.12"
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
testcontainers-modules = { version = "0.11.6", features = ["localstack", "postgres"] }
