[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["localstack"] }
dotenv = "0.15.0"
