[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "bigdecimal",
    "chrono",
    "macros",
] }

[dev-dependencies]
testcontainers-modules = { workspace = true }