[package]
name = "message_handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

axum = "0.8.1"
aws-config = "1.6.0"
aws-sdk-sqs = "1.62.0"
starknet = "0.14.0"
dotenv = "0.15.0"
common = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", tag = "1.0.0", package = "common" }


[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["localstack"] }
dotenv = "0.15.0"
