[package]
name = "message_handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Web framework
axum = { workspace = true }

# Starknet
starknet = { workspace = true }
starknet-crypto = { workspace = true }

# Utilities
dotenv = { workspace = true }
common = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", tag = "1.0.0", package = "common" }

[dev-dependencies]
testcontainers-modules = { workspace = true }
url = { workspace = true }