[package]
name = "proving-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proving-service"
path = "src/main.rs"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8.1"
dotenv = "0.15.0"
aws-config = "1.6.0"
aws-sdk-sqs = "1.62.0"
message-handler = { path = "../message-handler" }

[dev-dependencies] 