[package]
name = "proving-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proving-service"
path = "src/main.rs"

[dependencies]
# Core dependencies
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Utilities
dotenv = { workspace = true }

# Internal dependencies
message-handler = { path = "../message-handler" }

[dev-dependencies] 