[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
dotenv = { workspace = true }

[dev-dependencies]
testcontainers = { version = "0.14" }
lazy_static = { workspace = true }