[package]
name = "message-handler"
version = "0.1.0"
edition = "2024"

[features]
default = []
proof-composition = [
    "coprocessor_common", 
    "coprocessor_core", 
    "add_twap_7d_error_bound_floating", 
    "max_return_floating", 
    "remove_seasonality_error_bound_floating", 
    "simulate_price_verify_position_floating", 
    "calculate_pt_pt1_error_bound_floating", 
    "twap_error_bound_floating", 
    "hashing_felts", 
    "proof_composition_twap_maxreturn_reserveprice_floating_hashing_methods"
]

[dependencies]
# Core dependencies
dotenv = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Starknet
starknet = { workspace = true }
starknet-crypto = { workspace = true }

db = { path = "../db" }

# Proving deps - all optional behind the proof-composition feature
coprocessor_common = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "common", optional = true }
coprocessor_core = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "core", optional = true }

add_twap_7d_error_bound_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "add-twap-7d-error-bound-floating", optional = true }
max_return_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "max-return-floating", optional = true }
remove_seasonality_error_bound_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "remove-seasonality-error-bound-floating", optional = true }
simulate_price_verify_position_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "simulate-price-verify-position-floating", optional = true }
calculate_pt_pt1_error_bound_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "calculate-pt-pt1-error-bound-floating", optional = true }
twap_error_bound_floating = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "twap-error-bound-floating", optional = true }
hashing_felts = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "hashing-felts", optional = true }
proof_composition_twap_maxreturn_reserveprice_floating_hashing_methods = { git = "https://github.com/NethermindEth/pitchlake-coprocessor", package = "proof-composition-twap-maxreturn-reserveprice-floating-hashing-methods", optional = true }

risc0-zkvm = { version = "2.0.1" }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
url = { workspace = true }

[[bin]]
name = "message-handler"
path = "src/main.rs"

[[bin]]
name = "example-message-handler"
path = "src/example_service_main.rs"