[package]
name = "proving-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proving-service"
path = "src/main.rs"

[dependencies]
# Core dependencies
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
# uuid = { version = "1.6.1", features = ["v4"] }

# AWS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Web framework
axum = { workspace = true }

# Internal dependencies
message-handler = { path = "../message-handler" }

[dev-dependencies] 
tokio = { workspace = true, features = ["rt", "macros", "test-util"] } 
async-trait = { workspace = true }
serde_json = { workspace = true }